Fixed bug in kanban where dragged task card where appearing behind the column during drag due to specifying a 'relative' position on the kanban-column div

--- a/f/src/c/kanban/kanbanColumn.css
+++ b/f/src/c/kanban/kanbanColumn.css
@@ -1,5 +1,4 @@
 div.kanban-column {
-    position: relative;
     width: 220px;
     margin-right: 10px;
     border-radius: 5px;
@@ -15,7 +14,7 @@ div.kanban-item-overlay {
 }
 
 div.kanban-column i.quick-add-btn {
-    position: absolute;
-    left: 10px;
-    top: 5px;
+    position: relative;
+    left: -45px;
+    top: 3px;
 }
